Stp_ccg_snapshots2
added 2 snapshots

--- a/config/pipelines/reference_tables/config_ccg_code_mapping.json
+++ b/config/pipelines/reference_tables/config_ccg_code_mapping.json
@@ -3,7 +3,7 @@
 		"products": [
 			{
 			"product_name": "Reference Data",
-			"topic": "ccg code mapping",
+			"topic": "ccg_code_mapping",
 			"metrics": [
 				{
             			"id": "",
