--- a/config/pipelines/reference_tables/config_stp_code_mapping.json
+++ b/config/pipelines/reference_tables/config_stp_code_mapping.json
@@ -3,7 +3,7 @@
 		"products": [
 			{
 			"product_name": "Reference Data",
-			"topic": "stp code mapping",
+			"topic": "stp_code_mapping",
 			"metrics": [
 				{
             			"id": "",
