--- a/config/pipelines/nhsx-au-analytics/config_ndc_repeat_prescription_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_ndc_repeat_prescription_dbrks.json
@@ -21,7 +21,7 @@
 	    "name": "trigger_ndc_repeat_prescription",
 	    "folder": "nhsx-au-analytics/sharepoint/ndc_repeat_prescription/",
 	    "ingestion": {
-		"source_path": "Shared Documents/nhsx_au_ingestion/ndc_repeat_prescription/",
+		"source_path": "Documents/nhsx_au_ingestion/ndc_repeat_prescription/",
 		"databricks_notebook": "/databricks/au-azure-databricks-cicd/ingestion/dbrks_ndc_repeat_prescription/dbrks_ndc_repeat_prescription"
 	    },
     
