--- a/config/pipelines/direct-load/config_ers_api.json
+++ b/config/pipelines/direct-load/config_ers_api.json
@@ -19,7 +19,7 @@
         "name": "trigger_e_rs_api",
         "folder": "nhsx-au-analytics/nhsdigital/e_rs_api/",
         "ingestion": {
-            "source_path": "Documents/nhsx_au_ingestion/e_rs_api/"
+            "source_path": "Shared Documents/nhsx_au_ingestion/e_rs_api/"
         },
 
         "raw": {
